# harmony

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile_shaders_tool.py  compile_shaders_tool_v2.py  create_game.py  create_mono_project.py  create_project.py  create_sample.py  entry.cpp  get_sources.py  harmony.cpp  output.txt  pull_dawn.bat  setup_nvim_win.bat
dojo/: CMakeLists.txt  main.cpp
dojo/include/: EditorApplication.h  EditorMenu.h  EditorPanel.h  EditorUtils.h  EditorUtils.hpp  EditorView.h  MainIncludes.h  ShaderHotReload.h
dojo/src/: EditorApplication.cpp  EditorMenu.cpp  EditorPanel.cpp  EditorUtils.cpp  EditorView.cpp  ShaderHotReload.cpp
editor/: CMakeLists.txt  main.cpp
editor/include/: EditorApplication.h  EditorUtils.hpp  EditorView.h
editor/src/: EditorApplication.cpp  EditorView.cpp
harmony/: CMakeLists.txt
harmony-core/: CMakeLists.txt
harmony-core-runtime/: CMakeLists.txt
harmony-core-runtime/include/: MainIncludes.h  RuntimeProgram.h
harmony-core-runtime/src/: RuntimeProgram.cpp
harmony-core/include/: Project.h  stb_rect_pack.h
harmony-core/include/Assets/: Asset.h  AssetFactory.h  AssetManager.h  FontAsset.h  FontAssetFactory.h  ModelAsset.h  ShaderSourceAsset.h  ShaderSourceAssetFactory.h  ShaderStageBinaryAssetFactory.h  TextAsset.h  TextureAsset.h  TextureAssetFactory.h
harmony-core/include/Collision/: Collision.h  CollisionShapes.h
harmony-core/include/Core/: Alias.h  BGFXDebugCallback.h  BS_thread_pool.hpp  FSM.h  Input.h  Log.hpp  MathsUtils.h  Memory.h  Profile.hpp  Program.h  ProgramComponent.h  Project.h  Scene.h  SerializationKeys.h  Thread.h  Time.h  TypeDef.h  Utils.h
harmony-core/include/ECS/: CameraComponent.h  CameraSystem.h  Entity.h  EntityDataSystem.h  EntityTemplate.h  LightComponents.h  LightSystem.h  MaterialComponent.h  MaterialSystem.h  MeshComponent.h  MeshSystem.h  ModelComponent.h  SimpleCollisionComponent.h  SimpleCollisionSystem.h  SkyComponent.h  System.h  TileMapComponent.h  TileMapSystem.h  TileMapSystemImGui.h  TransformComponent.h  TransformSystem.h
harmony-core/include/ImGui/: ImGuiFileDialog.h  ImGuizmo.h  ImNodes.h  ImNodesEz.h  Logger.h  bgfx_utils.h  droidsans.ttf.h  fs_imgui_image.bin.h  fs_ocornut_imgui.bin.h  icons_font_awesome.ttf.h  icons_kenney.ttf.h  imconfig.h  imgui.h  imgui_bgfx.h  imgui_internal.h  imnodes_internal.h  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h  roboto_regular.ttf.h  robotomono_regular.ttf.h  vs_imgui_image.bin.h  vs_ocornut_imgui.bin.h
harmony-core/include/Rendering/: Attachment.h  BuiltinShaders.h  Camera.h  DataBindSource.h  Framebuffer.h  GPUResourceManager.h  Mesh.h  Model.h  Pipeline.h  PipelineDrawStage.h  PipelineHandle.h  PipelinePostProcessStage.h  PipelineStack.h  PipelineStage.h  PipelineStageRenderer.h  PostProcessStage.h  Renderer.h  Shader.h  ShaderDataOverride.h  ShaderDataSource.h  ShaderUniform.h  Shapes.h  Texture.h  TypeDef.h  VectorGraphics.h  View.h
harmony-core/include/STL/: Algorithm.h  Array.h  Chrono.h  FileSystem.h  Functional.h  HashMap.h  IO.h  Json.hpp  Map.h  Memory.h  Optional.h  Stack.h  String.h  Thread.h  TypeTraits.h  Util.h  Vector.h
harmony-core/include/Script/: ScriptAPI.h
harmony-core/src/: Project.cpp
harmony-core/src/Assets/: Asset.cpp  AssetFactory.cpp  AssetManager.cpp  FontAsset.cpp  FontAssetFactory.cpp  ShaderSourceAsset.cpp  ShaderSourceAssetFactory.cpp  ShaderStageBinaryAssetFactory.cpp  TextureAsset.cpp  TextureAssetFactory.cpp
harmony-core/src/Collision/: Collision.cpp  CollisionShapes.cpp
harmony-core/src/Core/: FSM.cpp  Input.cpp  MathUtils.cpp  Memory.cpp  Program.cpp  ProgramComponent.cpp  Project.cpp  Scene.cpp  Thread.cpp  Time.cpp  TypeDef.cpp  Utils.cpp
harmony-core/src/ECS/: CameraSystem.cpp  Entity.cpp  EntityDataSystem.cpp  EntityTemplate.cpp  LightSystem.cpp  MaterialSystem.cpp  MeshSystem.cpp  SimpleCollisionComponent.cpp  SimpleCollisionSystem.cpp  System.cpp  TileMapSystem.cpp  TileMapSystemImGui.cpp  TransformSystem.cpp
harmony-core/src/ImGui/: ImGuiFileDialog.cpp  ImGuizmo.cpp  ImNodes.cpp  ImNodesEz.cpp  Logger.cpp  bgfx_utils.cpp  imgui.cpp  imgui_bgfx.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
harmony-core/src/Rendering/: Attachment.cpp  Camera.cpp  Framebuffer.cpp  (+20 more)
harmony-dojo/: CMakeLists.txt  main.cpp
harmony-dojo/include/: EditorMenu.h  EditorPanel.h  EditorView.h
harmony-editor/: CMakeLists.txt
harmony-editor/include/: MainIncludes.h
harmony-modules/harmony-assimp/: CMakeLists.txt
harmony-modules/harmony-jolt/: CMakeLists.txt
harmony-modules/harmony-mono/: CMakeLists.txt
harmony-runtime/: CMakeLists.txt
harmony-runtime/include/: JoltMonoBind.h  MainIncludes.h  RuntimeProgram.h
harmony-runtime/src/: JoltMonoBind.cpp  RuntimeProgram.cpp
harmony/include/: Alloc.h  Application.h  Asset.h  AssetManager.h  Assets.h  Backend.h  ECS.h  Engine.h  ImGuiFileDialog.h  Json.h  Macros.h  Maths.h  Primitives.h  Program.h  ProgramComponent.h  Project.h  SDL3WGPU.h  STL.h  ScriptSandboxComponent.h  Timer.h  Utils.h  WGPUBackend.h  stb_image.h  stb_textedit.h  stb_truetype.h
harmony/src/: Application.cpp  AssetManager.cpp  Assets.cpp  ECS.cpp  Engine.cpp  Entry.cpp  ImGuiFileDialog.cpp  Program.cpp  Project.cpp  SDL3WGPU.cpp  STL.cpp  ScriptSandboxComponent.cpp  Utils.cpp  WGPUBackend.cpp  glad.c
modules/harmony-assimp/: CMakeLists.txt
modules/harmony-das/: CMakeLists copy.txt  CMakeLists.txt
modules/harmony-jolt/: CMakeLists.txt
modules/harmony-lua/: CMakeLists.txt
modules/harmony-luau/: CMakeLists.txt
modules/harmony-mono/: CMakeLists.txt
samples/sample_base/: CMakeLists.txt
samples/shader_test/: CMakeLists.txt  main.cpp
sandbox/: CMakeLists.txt  main.cpp  testscript.das
targets/mono-editor-test/: CMakeLists.txt  main.cpp
templates/game-core-runtime/: CMakeLists.txt
templates/game-runtime/: CMakeLists.txt
templates/harmony-app/: CMakeLists.txt  main.cpp
templates/harmony-dojo/: CMakeLists.txt  CMakeSettings.json  main.cpp
templates/harmony-editor-runtime/: CMakeLists.txt
(+1065 files in other folders)
